add links between /vote and /results

--- a/results.html
+++ b/results.html
@@ -10,6 +10,8 @@
 	<h1>Abimotto-Abstimmung</h1>
 	<h2>Ergebnisse</h2>
 
+	<a href="/vote">Zum Abstimmen</a>
+
 	<table>
 		<thead>
 			<th>Option</th>
