--- a/vote.html
+++ b/vote.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 	<h1>Abimotto-Abstimmung</h1>
+	<h2>Abstimmen</h2>
+	<a href="/results">Zu den Ergebnissen</a>
 	<p>Maximal 5 auswählbar</p>
 	<form enctype="multipart/form-data" method="post" action="/submit">
 		{{#options}}
