--- a/vote.html
+++ b/vote.html
@@ -13,13 +13,13 @@
 	<p>Maximal 5 auswählbar</p>
 	<form enctype="multipart/form-data" method="post" action="/submit">
 		{{#options}}
-		<input name="{{id}}" type="checkbox">
-		<span class="label">{{name}}</span>
+		<input name="{{id}}" id="checkbox-{{id}}" type="checkbox">
+		<label for="checkbox-{{id}}">{{name}}</label>
 		<br>
 		{{/options}}
 		<br>
-		<input name="consent" type="checkbox" required>
-		<span class="label">Ich erlaube, dass, um Mehrfachantworten zu vermeiden, meine IP-Adresse anonymisiert gespeichert wird und dass beim Absenden ein Cookie (mit welchem ich nicht identifiziert werden kann) angelegt wird.</span>
+		<input name="consent" id="checkbox-consent" type="checkbox" required>
+		<label for="checkbox-consent">Ich erlaube, dass, um Mehrfachantworten zu vermeiden, meine IP-Adresse anonymisiert gespeichert wird und dass beim Absenden ein Cookie (mit welchem ich nicht identifiziert werden kann) angelegt wird.</label>
 		<br>
 		<br>
 		<input type="submit" value="Einsenden">
