--- a/vote.html
+++ b/vote.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
 	<meta charset="UTF-8">
-	<title>Lehrerzitate</title>
+	<title>Abstimmen - Abimotto-Abstimmung</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="style.css" media="all">
 </head>
