--- a/vote.html
+++ b/vote.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Abstimmen - Abimotto-Abstimmung</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="style.css" media="all">
+	<link rel="stylesheet" href="static/style.css" media="all">
 </head>
 <body>
 	<h1>Abimotto-Abstimmung</h1>
