--- a/vote.html
+++ b/vote.html
@@ -2,12 +2,12 @@
 <html lang="de">
 <head>
 	<meta charset="UTF-8">
-	<title>Abstimmen - Abimotto-Abstimmung</title>
+	<title>Abstimmen - {{#if votingname}}{{votingname}}-{{/if}}Abstimmung</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="style.css" media="all">
 </head>
 <body>
-	<h1>Abimotto-Abstimmung</h1>
+	<h1>Abstimmung{{#if votingname}}: {{votingname}}{{/if}}</h1>
 	<h2>Abstimmen</h2>
 	<a href="/results">Zu den Ergebnissen</a>
 	<p>Maximal 5 auswählbar</p>
