add <br> line breaks on error page

--- a/error.html
+++ b/error.html
@@ -10,7 +10,7 @@
 	<h1>Abstimmung{{#if votingname}}: {{votingname}}{{/if}}</h1>
 	<h2>Fehler</h2>
 
-	<code>{{message}}</code>
+	<code>{{{message}}}</code>
 	<br>
 	<br>
 
